# torchlr

./: README.md  pyproject.toml
examples/: advection_diffusion.py  poisson.py
src/torchlr/: __init__.py  compute_residual.py  crossDEIM.py  direct_poisson.py  index_selection.py  linalg.py  scross.py  torch_config.py  torch_dst.py  trunc_sum.py
